LFD-153 [Server] Improve Metrics fixed Sonar Code Smells